--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,12 +4,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+/* base styles */
 body {
   font-family: Poppins, sans-serif;
   margin: 0;
   font-size: 1.1em;
 }
-
 ul,
 li,
 p,
@@ -20,7 +20,6 @@ h4 {
   margin: 0;
   padding: 0;
 }
-
 ul {
   list-style-type: none;
 }
@@ -34,7 +33,6 @@ ul {
   cursor: pointer;
   font-size: 1em;
 }
-
 .btn:hover {
   background: #1f9751;
   color: #fff;
